Improved Meta Data
Added Form class meta data and additional information to enable django template for responses.

--- a/example/example/templates/example/survey_detail.html
+++ b/example/example/templates/example/survey_detail.html
@@ -10,6 +10,7 @@
 <p>Responses</p>
 <hr>
 {% for surveyresponse in object.surveyresponse_set.all %}
+    {{surveyresponse.response.items}}
 <ul>
     {% for k, v in surveyresponse.response.items %}
     <li><strong>{{k}}: </strong> {{v}}</li>
