remove file field

--- a/dynamic_forms/templates/dynamic_forms/widgets/formbuilder.html
+++ b/dynamic_forms/templates/dynamic_forms/widgets/formbuilder.html
@@ -17,7 +17,7 @@
                 text: ['color', 'password'],
                 textarea: ['tinymce'],
             },
-            disableFields: ['autocomplete', 'button', 'starRating', ],
+            disableFields: ['autocomplete', 'button', 'starRating', 'file' ],
             editOnAdd: true,
             fields: [{
                 label: "Email",
